fix: Text CTA overflow and Quill Styles

--- a/assets/src/blocks/godam-player/style.scss
+++ b/assets/src/blocks/godam-player/style.scss
@@ -259,7 +259,6 @@
 .easydam-layer--cta-text {
 	max-height: 100%;
 	width: 100%;
-	padding: 2rem;
 	overflow: auto;
 }
 
